--- a/argocd-mcp-server/templates/serviceaccount.yaml
+++ b/argocd-mcp-server/templates/serviceaccount.yaml
@@ -3,4 +3,4 @@ kind: ServiceAccount
 metadata:
   name: {{ include "argocd-mcp-server.fullname" . }}-sa
   labels:
-    app: argocd-mcp-server
+{{ include "argocd-mcp-server.labels" . | indent 4 }}
