--- a/argocd-mcp-server/values.yaml
+++ b/argocd-mcp-server/values.yaml
@@ -9,4 +9,11 @@ service:
   type: LoadBalancer
   port: 8000
 
-resources: {}
+# Add this resources section
+resources:
+  requests:
+    cpu: 100m
+    memory: 128Mi
+  limits:
+    cpu: 250m
+    memory: 256Mi
