--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -15,17 +15,15 @@ spec:
         app: argocd-mcp-server
     spec:
       serviceAccountName: {{ include "argocd-mcp-server.fullname" . }}-sa
-      # priorityClassName removed
       containers:
         - name: mcp-server
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          # ✅ Use official FastAPI image (no runtime pip install required)
+          image: "tiangolo/uvicorn-gunicorn-fastapi:python3.11"
+          imagePullPolicy: IfNotPresent
           resources:
 {{ toYaml .Values.resources | indent 12 }}
-          command: ["sh", "-c"]
-          args:
-            - pip install fastapi uvicorn requests python-dotenv mcp[server] && \
-              uvicorn server:app --host 0.0.0.0 --port 8000
+          # ✅ Default CMD of this image runs "uvicorn app:app"
+          # Since your ConfigMap mounts server.py → /app/server.py, app=app works.
           ports:
             - containerPort: 8000
           envFrom:
