--- a/argocd-mcp-server/templates/secret-env.yaml
+++ b/argocd-mcp-server/templates/secret-env.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: {{ include "argocd-mcp-server.fullname" . }}-env
 type: Opaque
-stringData:
-{{ (.Files.Get "files/.env" | indent 2) }}
+data:
+{{ (.Files.Get "files/.env" | b64enc | indent 2) }}
