--- a/argocd-mcp-server/templates/secret-env.yaml
+++ b/argocd-mcp-server/templates/secret-env.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "argocd-mcp-server.fullname" . }}-env
+  namespace: {{ .Release.Namespace }}
 type: Opaque
-data:
-{{ (.Files.Get "files/.env" | b64enc | indent 2) }}
+stringData:
+{{ (.Files.Get "files/.env" | indent 2) }}
