--- a/argocd-mcp-server/templates/secret-env.yaml
+++ b/argocd-mcp-server/templates/secret-env.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "argocd-mcp-server.fullname" . }}-env
-  namespace: {{ .Release.Namespace }}
 type: Opaque
 stringData:
-{{ (.Files.Get "files/.env" | indent 2) }}
+  .env: |-
+{{ (.Files.Get "files/.env" | indent 4) }}
