--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -18,6 +18,9 @@ spec:
       containers:
         - name: mcp-server
           image: "tiangolo/uvicorn-gunicorn-fastapi:python3.11"
+          command: ["/bin/sh", "-c"]
+          args:
+            - pip install requests && exec /start.sh
           imagePullPolicy: IfNotPresent
           resources:
 {{ toYaml .Values.resources | indent 12 }}
