--- a/argocd-mcp-server/templates/secret-env.yaml
+++ b/argocd-mcp-server/templates/secret-env.yaml
@@ -4,5 +4,6 @@ metadata:
   name: {{ include "argocd-mcp-server.fullname" . }}-env
 type: Opaque
 stringData:
-  .env: |-
-{{ (.Files.Get "files/.env" | indent 4) }}
+ARGOCD_BASE_URL: "http://abd48e273a3b74819b3d9b011dded6c6-2132693054.us-east-1.elb.amazonaws.com"
+ARGOCD_USERNAME: "admin"
+ARGOCD_PASSWORD: "c0icurMek2G-aRdu"
