--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -15,6 +15,17 @@ spec:
         app: argocd-mcp-server
     spec:
       serviceAccountName: {{ include "argocd-mcp-server.fullname" . }}-sa
+
+      # ===== Add initContainers here =====
+      initContainers:
+        - name: install-uvicorn
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          command: ["/bin/sh", "-c"]
+          args: ["pip install --no-cache-dir uvicorn fastapi -t /app"]
+          volumeMounts:
+            - name: server-code
+              mountPath: /app
+
       containers:
         - name: mcp-server
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -30,9 +41,9 @@ spec:
                 name: {{ include "argocd-mcp-server.fullname" . }}-env
           env:
             - name: APP_MODULE
-              value: "server:app"   # <--- tells uvicorn which app to start
+              value: "server:app"
             - name: PORT
-              value: "8000"         # <--- ensures it listens on 0.0.0.0:8000
+              value: "8000"
           volumeMounts:
             - name: server-code
               mountPath: /app/server.py
