--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "argocd-mcp-server.fullname" . }}
   labels:
-{{ include "argocd-mcp-server.labels" . | indent 4 }}
+    {{- include "argocd-mcp-server.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -15,44 +15,37 @@ spec:
         app: argocd-mcp-server
     spec:
       serviceAccountName: {{ include "argocd-mcp-server.fullname" . }}-sa
-
-      # Init container installs uvicorn and fastapi in a writable volume
-      initContainers:
-        - name: install-uvicorn
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          command: ["/bin/sh", "-c"]
-          args: ["pip install --no-cache-dir uvicorn fastapi -t /python-packages"]
-          volumeMounts:
-            - name: python-packages
-              mountPath: /python-packages
-
       containers:
         - name: mcp-server
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["/bin/sh", "-c"]
-          args: ["PYTHONPATH=/python-packages:/app uvicorn server:app --host 0.0.0.0 --port 8000 --reload"]
-          resources:
-{{ toYaml .Values.resources | indent 12 }}
+          image: "tiangolo/uvicorn-gunicorn-fastapi:python3.11"
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
-          envFrom:
-            - secretRef:
-                name: {{ include "argocd-mcp-server.fullname" . }}-env
           env:
-            - name: APP_MODULE
-              value: "server:app"
-            - name: PORT
-              value: "8000"
+            - name: ARGOCD_BASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "argocd-mcp-server.fullname" . }}-env
+                  key: ARGOCD_BASE_URL
+            - name: ARGOCD_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "argocd-mcp-server.fullname" . }}-env
+                  key: ARGOCD_USERNAME
+            - name: ARGOCD_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "argocd-mcp-server.fullname" . }}-env
+                  key: ARGOCD_PASSWORD
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
             - name: server-code
-              mountPath: /app
+              mountPath: /app/server.py
+              subPath: server.py
             - name: tools-json
               mountPath: /app/tools.json
               subPath: tools.json
-            - name: python-packages
-              mountPath: /python-packages
-
       volumes:
         - name: server-code
           configMap:
@@ -60,5 +53,3 @@ spec:
         - name: tools-json
           configMap:
             name: {{ include "argocd-mcp-server.fullname" . }}-tools
-        - name: python-packages
-          emptyDir: {}
