--- a/argocd-mcp-server/templates/configmap-server.yaml
+++ b/argocd-mcp-server/templates/configmap-server.yaml
@@ -1,7 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "argocd-mcp-server.fullname" . }}-server
+  name: {{ include "argocd-mcp-server.fullname" . }}-config
 data:
   server.py: |
 {{ .Files.Get "files/server.py" | indent 4 }}
+  tools.json: |
+{{ .Files.Get "files/tools.json" | indent 4 }}
