--- a/argocd-mcp-server/templates/configmap-server.yaml
+++ b/argocd-mcp-server/templates/configmap-server.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-name: {{ include "argocd-mcp-server.fullname" . }}-config
+  name: {{ include "argocd-mcp-server.fullname" . }}-config
+  namespace: {{ .Release.Namespace }}
 data:
-server.py: |
+  server.py: |
 {{ .Files.Get "files/server.py" | indent 4 }}
-tools.json: |
+  tools.json: |
 {{ .Files.Get "files/tools.json" | indent 4 }}
