--- a/argocd-mcp-server/templates/configmap-server.yaml
+++ b/argocd-mcp-server/templates/configmap-server.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "argocd-mcp-server.fullname" . }}-config
+  name: mcp-argo
   namespace: {{ .Release.Namespace }}
 data:
   server.py: |
