--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -18,6 +18,8 @@ spec:
       containers:
         - name: mcp-server
           image: "tiangolo/uvicorn-gunicorn-fastapi:python3.11"
+          command: ["uvicorn"]
+          args: ["server:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8000
