--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -1,9 +1,3 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ include "argocd-mcp-server.fullname" . }}
-  labels:
-    {{- include "argocd-mcp-server.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -15,6 +9,25 @@ spec:
         app: argocd-mcp-server
     spec:
       serviceAccountName: {{ include "argocd-mcp-server.fullname" . }}-sa
+
+      # ----------------------------
+      # Init container to install Python packages
+      # ----------------------------
+      initContainers:
+        - name: install-deps
+          image: "python:3.11-slim"
+          command:
+            - sh
+            - -c
+            - |
+              pip install --no-cache-dir requests python-dotenv -t /app
+          volumeMounts:
+            - name: server-config
+              mountPath: /app
+
+      # ----------------------------
+      # Main container
+      # ----------------------------
       containers:
         - name: mcp-server
           image: "tiangolo/uvicorn-gunicorn-fastapi:python3.11"
@@ -30,6 +43,10 @@ spec:
               mountPath: /app
             - name: env-file
               mountPath: /app/env
+
+      # ----------------------------
+      # Volumes
+      # ----------------------------
       volumes:
         - name: server-config
           configMap:
@@ -37,4 +54,3 @@ spec:
         - name: env-file
           secret:
             secretName: {{ include "argocd-mcp-server.fullname" . }}-env
-
