--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -1,3 +1,9 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: {{ include "argocd-mcp-server.fullname" . }}
+  labels:
+    {{- include "argocd-mcp-server.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -9,13 +15,9 @@ spec:
         app: argocd-mcp-server
     spec:
       serviceAccountName: {{ include "argocd-mcp-server.fullname" . }}-sa
-
-      # ----------------------------
-      # Init container to install Python packages
-      # ----------------------------
       initContainers:
         - name: install-deps
-          image: "python:3.11-slim"
+          image: python:3.11-slim
           command:
             - sh
             - -c
@@ -24,13 +26,9 @@ spec:
           volumeMounts:
             - name: server-config
               mountPath: /app
-
-      # ----------------------------
-      # Main container
-      # ----------------------------
       containers:
         - name: mcp-server
-          image: "tiangolo/uvicorn-gunicorn-fastapi:python3.11"
+          image: tiangolo/uvicorn-gunicorn-fastapi:python3.11
           command: ["uvicorn"]
           args: ["server:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
           imagePullPolicy: IfNotPresent
@@ -43,10 +41,6 @@ spec:
               mountPath: /app
             - name: env-file
               mountPath: /app/env
-
-      # ----------------------------
-      # Volumes
-      # ----------------------------
       volumes:
         - name: server-config
           configMap:
