--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
               mountPath: /app
       containers:
         - name: mcp-server
-          image: tiangolo/uvicorn-gunicorn-fastapi:python3.11
+          image: python
           command: ["uvicorn"]
           args: ["server:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
           imagePullPolicy: IfNotPresent
