--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -17,19 +17,21 @@ spec:
       serviceAccountName: {{ include "argocd-mcp-server.fullname" . }}-sa
       initContainers:
         - name: install-deps
-          image: python:3.11-slim
+          image: python:3.12-slim
           command: ["sh", "-c"]
           args:
-            - pip install --no-cache-dir requests python-dotenv -t /app
+            - pip install --no-cache-dir requests python-dotenv uvicorn -t /app
           volumeMounts:
             - name: server-code
               mountPath: /app
       containers:
         - name: mcp-server
           image: python:3.12-slim
-          command: ["uvicorn"]
+          command: ["python3", "-m", "uvicorn"]
           args: ["server:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
-          imagePullPolicy: IfNotPresent
+          env:
+            - name: PYTHONPATH
+              value: /app
           ports:
             - containerPort: 8000
           resources:
