--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -15,38 +15,34 @@ spec:
         app: argocd-mcp-server
     spec:
       serviceAccountName: {{ include "argocd-mcp-server.fullname" . }}-sa
-      initContainers:
-        - name: install-deps
-          image: python:3.12-slim
-          command: ["sh", "-c"]
-          args:
-            - pip install --no-cache-dir requests python-dotenv uvicorn -t /app
-          volumeMounts:
-            - name: server-code
-              mountPath: /app
       containers:
         - name: mcp-server
           image: python:3.12-slim
           command: ["python3", "-m", "uvicorn"]
-          args: ["server:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+          args: ["server:app", "--host", "0.0.0.0", "--port", "8000"]
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
           env:
             - name: PYTHONPATH
               value: /app
-          ports:
-            - containerPort: 8000
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
             - name: server-code
               mountPath: /app
             - name: env-file
               mountPath: /app/env
+      initContainers:
+        - name: install-deps
+          image: python:3.12-slim
+          command: ["sh", "-c"]
+          args:
+            - pip install --no-cache-dir uvicorn requests python-dotenv -t /app
+          volumeMounts:
+            - name: server-code
+              mountPath: /app
       volumes:
         - name: server-code
           emptyDir: {}
-        - name: server-config
-          configMap:
-            name: mcp-argo
         - name: env-file
           secret:
             secretName: {{ include "argocd-mcp-server.fullname" . }}-env
