--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -15,35 +15,39 @@ spec:
         app: argocd-mcp-server
     spec:
       serviceAccountName: {{ include "argocd-mcp-server.fullname" . }}-sa
-      containers:
-        - name: mcp-server
-          image: python:3.12-slim
-          command: ["python3", "-m", "uvicorn"]
-          args: ["server:app", "--host", "0.0.0.0", "--port", "8000"]
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 8000
-          env:
-            - name: PYTHONPATH
-              value: /app
-          volumeMounts:
-            - name: server-code
-              mountPath: /app
-            - name: env-file
-              mountPath: /app/env
+      volumes:
+        - name: server-code
+          configMap:          # your FastAPI code here
+            name: mcp-argo-code
+        - name: env-file
+          secret:
+            secretName: {{ include "argocd-mcp-server.fullname" . }}-env
+        - name: python-deps
+          emptyDir: {}        # writable volume for Python packages
       initContainers:
         - name: install-deps
           image: python:3.12-slim
           command: ["sh", "-c"]
           args:
-            - pip install --no-cache-dir uvicorn requests python-dotenv -t /app
+            - pip install --no-cache-dir uvicorn requests python-dotenv -t /python-deps
+          volumeMounts:
+            - name: python-deps
+              mountPath: /python-deps
+      containers:
+        - name: mcp-server
+          image: python:3.12-slim
+          command: ["python3", "-m", "uvicorn"]
+          args: ["server:app", "--host", "0.0.0.0", "--port", "8000"]
+          ports:
+            - containerPort: 8000
+          env:
+            - name: PYTHONPATH
+              value: /python-deps:/app
           volumeMounts:
             - name: server-code
               mountPath: /app
-      volumes:
-        - name: server-code
-          configMap:
-            name: mcp-argo # contains server.py
-        - name: env-file
-          secret:
-            secretName: {{ include "argocd-mcp-server.fullname" . }}-env
+            - name: env-file
+              mountPath: /app/env
+            - name: python-deps
+              mountPath: /python-deps
+
