--- a/argocd-mcp-server/files/requirements.txt
+++ b/argocd-mcp-server/files/requirements.txt
@@ -3,4 +3,4 @@ uvicorn[standard]==0.23.2
 python-dotenv==1.0.1
 requests==2.31.0
 urllib3==2.0.5
-mcp==0.1.0   # replace with your actual MCP package version if published, or install locally
+mcp==0.1.0   # or your local MCP package
