--- a/argocd-mcp-server/templates/deployment.yaml
+++ b/argocd-mcp-server/templates/deployment.yaml
@@ -20,13 +20,16 @@ spec:
           image: python:3.11-slim
           command: ["sh", "-c"]
           args:
-            - pip install --no-cache-dir requests python-dotenv -t /app
+            - pip install --no-cache-dir requests python-dotenv -t /deps
           volumeMounts:
-            - name: server-code
-              mountPath: /app
+            - name: deps
+              mountPath: /deps
       containers:
         - name: mcp-server
           image: tiangolo/uvicorn-gunicorn-fastapi:python3.11
+          env:
+            - name: PYTHONPATH
+              value: "/deps:/app"
           command: ["uvicorn"]
           args: ["server:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
           imagePullPolicy: IfNotPresent
@@ -35,12 +38,14 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
+            - name: deps
+              mountPath: /deps
             - name: server-config
               mountPath: /app
             - name: env-file
               mountPath: /app/env
       volumes:
-        - name: server-code
+        - name: deps
           emptyDir: {}
         - name: server-config
           configMap:
