--- a/argocd-mcp-server/templates/configmap-server.yaml
+++ b/argocd-mcp-server/templates/configmap-server.yaml
@@ -1,10 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mcp-argo
-  namespace: {{ .Release.Namespace }}
+  name: argocd-mcp-code
 data:
   server.py: |
 {{ .Files.Get "files/server.py" | indent 4 }}
-  tools.json: |
-{{ .Files.Get "files/tools.json" | indent 4 }}
